# RemoteLabVIEWInterface

./: .gitignore
src/: RemoteLabviewInterface.lvproj
src/Scripting/Python_class/: Generate.vi  Python.lvclass
src/Scripting/Python_class/private/: Generate_utils_script.vi  file_name_utils_script.vi
src/Scripts/Python/: build.bat  example_helloworld.py  labVIEW_utils.py  labview_functions.py  poetry.toml  pyproject.toml  readme.md
src/Scripts/Python/doc/: make.bat
src/Scripts/Python/doc/source/: conf.py  index.rst  labVIEW_utils.rst  labview_functions.rst
